# starwalkers

./: Cargo.toml  readme.md
src/: index.html  main.rs
src/components/: ai.rs  buildings.rs  cards.rs  networking.rs  resources.rs  tech_tree.rs  units.rs
src/platform/: desktop.rs  web.rs
src/resources/: settings.rs
src/systems/resource_management/: gathering.rs
src/utils/: save_load.rs
